src/styles.scss
/* You can add global styles to this file, and also import other style files */
//@import "primeng/resources/themes/tailwind-light/theme.css";
//@import "primeng/resources/primeng.css";
@font-face {
  font-family: 'icomoon';
  src: url('assets/fonts/icomoon.eot');
}

/* Importing Bootstrap SCSS file. */
@import "styles/variables";
@import 'bootstrap/scss/bootstrap';
@import 'bootstrap/scss/mixins/breakpoints';


@import "styles/checkbox";
@import "styles/toggle";
@import "styles/svg_components";
@import "styles/scroll-prompt";
@import "styles/range_input";
@import 'ngx-sharebuttons/themes/default';

@import "styles/new_checkbox";
@import "styles/customisations";


//320px
//480px
//600px
//768px
//900px
//1024px
//1200px

//[16, 32, 48, 64, 96, 128, 256, 384, 640, 750, 828, 1080, 1200, 1920, 2048, 3840]


html {
  //background-color: $input-border-color;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


/* Add application styles & imports to this file! */
//@import 'primeng/resources/themes/lara-dark-blue/theme.css';

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  padding: 0;
  min-width: 320px;
  min-height: 100vh;
  font-family: 'Inter', sans-serif;
  //background-color: var(--surface-card);
}

h1 {
  margin-top: 0;
}


.nav-item div:hover {
  a {
    color: black !important;
    font-weight: bold;
  }

  background-color: ghostwhite;

}

.title-font {
  font-family: "Baskerville";
}

.title {
  font-family: "Baskerville";
  font-size: 4rem; // xxx-large;
  user-select: none;
  cursor: pointer;
  @media screen and (max-width: 600px) {
    font-size: 3rem;
  }
}

.text-theme {
  color: $teal-color !important;
}

.text-darker-theme {
  color: $teal-dark-color !important;
}

.theme-background {
  background-color: $teal-color !important;
}

.text-theme-background {
  @extend .theme-background;
  color: $light;
}

.text-darker-bg-theme {
  background-color: $teal-dark-color !important;
  color: $light;
}

::-webkit-scrollbar-track {
  background: white;
}

.pop-item {
  //width: 13rem;
  //height: 14rem;
}

.fs-smaller {
  //@media screen and ((min-width: 1400px)  and (max-width: 1661px)) {
  //  font-size: smaller;
  //}
  //@media screen and (min-width: 768px) and (max-width: 1024px) {
  //  font-size: smaller;
  //}
  //
  //@media screen and (max-width: 420px) {
    font-size: smaller;
  //}
}

.fs-small {
  @media screen and ((min-width: 1400px)  and (max-width: 1661px)) {
    font-size: small;
  }
  @media screen and (min-width: 768px) and (max-width: 1024px) {
    font-size: small;
  }

  @media screen and (max-width: 420px) {
    font-size: small;
  }
}

.fs-medium {
  @media screen and ((min-width: 1400px)  and (max-width: 1661px)) {
    font-size: medium;
  }
  @media screen and (min-width: 768px) and (max-width: 1024px) {
    font-size: medium;
  }

  @media screen and (max-width: 420px) {
    font-size: medium;
  }
}

.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: lightgray;
  opacity: 1; /* Firefox */
}

.form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: lightgray;
}

.form-control::-ms-input-placeholder { /* Microsoft Edge */
  color: lightgray;
}

.btn-group-sm > .btn, .btn-sm {
  @media screen and (max-width: 600px) {
    --bs-btn-padding-y: 0.125rem;
    --bs-btn-font-size: 0.750rem;
  }
}
.row {
  //--bs-gutter-x: 0rem;
}

.carousel-item {
  opacity: 0;
  visibility: hidden;
  //transition: opacity 0.2s ease !important;
  //z-index: -1;
}

.carousel-item.active {
  opacity: 1;
  transition: opacity 1s ease !important;
  visibility: visible;
  //z-index: 10;
}

.carousel-control-prev {
  //z-index: 20;
}

.carousel-control-next {
  //z-index: 20;
}

.carousel-indicators {
  //z-index: 20;
}

.carousel-text {
  user-select: none
}

.dropdown-menu li a {
  &:hover {
    //background-color: $dark-bg-subtle;
    //font-weight: bolder;
  }
}

.card-title {
  //font-family: Arvo, serif;
}

.text-truncate-container {
  //width: 250px;
}

.text-truncate-2 {
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.text-truncate-3 {
  -webkit-line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
}


.text-truncate-4 {
  -webkit-line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.progress-container {
  height: 1.5em;
}

.progress-bar {
  background-color: #BDAE64;
}

.text-justify {
  text-align: justify;
  text-justify: inter-word;
}
.multiselect-item-checkbox input + div{
  &:before, &:after{
    border-color: $teal-dark-color !important;
  }
}
.multiselect-item-checkbox input[type=checkbox]:checked + div:before{
  background-color: $teal-dark-color !important;
}

.multiselect-item-checkbox input[type=checkbox]:checked + div:after{
  border-color: $white !important;
}
.multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {
  max-width: 7rem !important;
  max-height: 1.5rem;
  background-color: $teal-dark-color !important;
}
.multiselect-dropdown .dropdown-btn .selected-item-container .selected-item a {
  display: none;
}

ng-multiselect-dropdown, .multiselect-dropdown .dropdown-btn {
  max-width: 10rem;
  min-width: 10rem;
  height: 2.25rem;
}

.customer-pic-wrapper {
  width: 3rem;
  height: 3rem;

}

.rating-info-row ngb-rating span {
  //color: $orange-700;
  color: $teal-dark-color;
}

pre {
  font-family: var(--bs-body-font-family);
  font-size: var(--bs-body-font-size);
  font-weight: var(--bs-body-font-weight);
  line-height: var(--bs-body-line-height);
  color: var(--bs-body-color);
  text-align: justify;
  white-space: pre-line;

}

.img-thumbnail {
  //max-height: 18em;
  //  height: 100%;
  width: 16rem;
  height: 16rem;
  object-fit: cover;
}

.cursor-pointer {
  cursor: pointer;
}

ngb-typeahead-window {
  width: 100%;
  .dropdown-item.active, .dropdown-item:active{
    background-color: $teal-color;
  }
}

.input-group .form-floating > input {
  border-left: none;
}

.input-group-text {
  background: none;
}

.review-form {
  max-width: 40rem;
}

.place-detail-container, .content-container {
  max-width: 60rem;

  .place-name-text {
    font-size: $h4-font-size;
  }
}

@include media-breakpoint-down(md) {
  .place-name-text {
    font-size: $h5-font-size !important;
  }
}

input [type="range"] {
  width: 17rem;
}

//.form-control.is-valid, .was-validated .form-control:valid { }
.was-validated .form-control:valid, .form-control.is-valid {
  background-image: inherit !important;
  border-color: inherit !important;
}

.sb-icon {
  width: 2rem;
  min-height: 2rem;
  background: inherit !important;
  box-shadow: none !important;
}

.ng-fa-icon {
  font-size: $h3-font-size;
}

.login-buttons {
  width: 12rem;
}

// SEPARATOR WITH TEXT

.separator {
  display: flex;
  align-items: center;
  text-align: center;
}

.separator::before,
.separator::after {
  content: '';
  flex: 1;
  border-bottom: 1px solid $dark-bg-subtle;
}

.separator:not(:empty)::before {
  margin-right: .25em;
}

.separator:not(:empty)::after {
  margin-left: .25em;
}

//SEPARATOR WITH TEXT ENDS


.detail-img {
  width: 100%;
  height: 350px;
  @include media-breakpoint-down(lg) {
    height: 280px;
  }

  //object-fit: none;
  //@include media-breakpoint-down(lg) {
  object-fit: cover;
  //}
}

.top-search-box {
  width: 30rem;
  height: 3.25rem;
}

.list-unit-accordion-group {
  .panel-heading, button {
    padding: 0;
    border: none;
  }

  button, .btn {
    &:active, &:hover, &:focus {
      background-color: $teal-color;
      color: $light;
    }
  }
}

.to-top {
  bottom: 0;
  cursor: pointer;
  margin: 0 8px 12px 0;
  position: fixed;
  right: 5px;
  opacity: 0;
}

.show-scrollTop {
  opacity: 0.4;
  transition: all 0.2s ease-in-out;
  &:hover {
    opacity: 0.9;
  }
}


.rating-element {
  max-width: 17rem;
}

.bg-no-img {
  background: url(assets/images/svgs/no-image.svg) no-repeat;
  background-size: contain;
}


@import "styles/components";

@import "styles/button";

